Fixe header z-index

--- a/themes/la-krypte/assets/stylesheets/_header.scss
+++ b/themes/la-krypte/assets/stylesheets/_header.scss
@@ -2,6 +2,7 @@
   background-color: transparent;
   position: fixed;
   left: 0;
+  z-index: 1;
   .wrapper {
     display: flex;
     height: 100px;
