--- a/themes/la-krypte/public/css/style.css
+++ b/themes/la-krypte/public/css/style.css
@@ -63,6 +63,7 @@ p {
   background-color: transparent;
   position: fixed;
   left: 0;
+  z-index: 1;
 }
 .header .wrapper {
   display: flex;
